--- a/bitcoin-qr-code-generator.html
+++ b/bitcoin-qr-code-generator.html
@@ -52,17 +52,22 @@
     "name": "Bitcoin QR Code Generator (BIP21)",
     "url": "https://www.alltoolai.com/bitcoin-qr-code-generator",
     "description": "Generate Bitcoin payment QR codes instantly using the BIP21 standard. Add amount, message, custom colors, logo, and download as PNG or PDF – private and client-side.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/bitcoin-qr-code-generator"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/qr-generator-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Bitcoin QR Code Generator",
     "applicationCategory": "UtilityApplication",
     "operatingSystem": "Web",
@@ -80,10 +85,14 @@
       "High-resolution PNG/PDF exports",
       "100% client-side and private"
     ],
-    "creator": {
+    "publisher": {
       "@type": "Organization",
       "name": "AllToolAI",
       "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/bitcoin-qr-code-generator"
     }
   }
   </script>
