--- a/email-qr-code-generator.html
+++ b/email-qr-code-generator.html
@@ -48,17 +48,22 @@
     "name": "Email QR Code Generator",
     "url": "https://www.alltoolai.com/email-qr-code-generator",
     "description": "Free, private, and fast Email QR Code Generator that lets you create mailto QR codes with custom subjects, bodies, and colors. Download as PNG or PDF.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/email-qr-code-generator"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/qr-generator-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Email QR Code Generator",
     "operatingSystem": "Any",
     "applicationCategory": "UtilitiesApplication",
@@ -75,10 +80,14 @@
       "Download as PNG or PDF",
       "Custom colors and logos"
     ],
-    "creator": {
+    "publisher": {
       "@type": "Organization",
       "name": "AllToolAI",
-      "url": "https://www.alltoolai.com"
+      "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/email-qr-code-generator"
     }
   }
   </script>
