--- a/event-qr-code-generator.html
+++ b/event-qr-code-generator.html
@@ -51,31 +51,40 @@
     "name": "Event QR Code Generator",
     "url": "https://www.alltoolai.com/event-qr-code-generator",
     "description": "Create scannable QR codes for your events with title, date, time, location, and contact info. Customize colors, add logos, and download PNG or PDF—all free and private.",
+    "isAccessibleForFree": true,
+    "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/event-qr-code-generator"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/qr-generator-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Event QR Code Generator",
     "operatingSystem": "Web",
     "applicationCategory": "UtilityApplication",
     "description": "Generate event QR codes instantly with title, description, date, time, location, and contact. 100% browser-based, private, and free.",
     "url": "https://www.alltoolai.com/event-qr-code-generator",
-    "image": "https://www.alltoolai.com/assets/images/event-qr-code-generator-preview.jpg",
-    "creator": {
-      "@type": "Organization",
-      "name": "AllToolAI",
-      "url": "https://www.alltoolai.com/"
-    },
     "offers": {
       "@type": "Offer",
       "price": "0",
       "priceCurrency": "USD"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/event-qr-code-generator"
     }
   }
   </script>
