--- a/location-qr-code-generator.html
+++ b/location-qr-code-generator.html
@@ -52,17 +52,22 @@
     "name": "Location QR Code Generator",  
     "url": "https://www.alltoolai.com/location-qr-code-generator",  
     "description": "Generate free location QR codes from GPS coordinates or addresses. Opens directly in Google or Apple Maps. 100% client-side and private.",  
-    "inLanguage": "en",  
-    "isPartOf": {  
-      "@type": "WebSite",  
-      "url": "https://www.alltoolai.com"  
-    }  
+    "isAccessibleForFree": true,
+    "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/location-qr-code-generator"
+    },
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/qr-generator-tools"
+    }
   }  
   </script>
   <script type="application/ld+json">  
   {  
     "@context": "https://schema.org",  
-    "@type": "SoftwareApplication",  
+    "@type": "Software",  
     "name": "Location QR Code Generator",  
     "operatingSystem": "Web",  
     "applicationCategory": "UtilityApplication",  
@@ -81,15 +86,15 @@
       "priceCurrency": "USD",  
       "category": "Free"  
     },  
-    "publisher": {  
-      "@type": "Organization",  
-      "name": "AllToolAI",  
-      "url": "https://www.alltoolai.com",  
-      "logo": {  
-        "@type": "ImageObject",  
-        "url": "https://www.alltoolai.com/logo.png"  
-      }  
-    }  
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/location-qr-code-generator"
+    }
   }  
   </script>
   <script type="application/ld+json">
