--- a/phone-qr-code-generator.html
+++ b/phone-qr-code-generator.html
@@ -51,17 +51,22 @@
     "name": "Phone Number to QR Code Generator (vCard & tel)",
     "url": "https://www.alltoolai.com/phone-qr-code-generator",
     "description": "Generate phone number QR codes for tel: and vCard instantly. Free, private, client-side tool to create branded QR codes with custom colors and logos in PNG or PDF format.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/phone-qr-code-generator"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/qr-generator-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Phone Number QR Code Generator",
     "operatingSystem": "Any (Web-based)",
     "applicationCategory": "UtilityApplication",
@@ -80,10 +85,14 @@
       "Add logo overlay with adjustable size",
       "Download high-resolution PNG or PDF"
     ],
-    "creator": {
+    "publisher": {
       "@type": "Organization",
       "name": "AllToolAI",
-      "url": "https://www.alltoolai.com"
+      "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/phone-qr-code-generator"
     }
   }
   </script>
