--- a/qr-code-scanner.html
+++ b/qr-code-scanner.html
@@ -49,27 +49,41 @@
     "@type": "WebPage",
     "url": "https://www.alltoolai.com/qr-code-scanner",
     "name": "QR Code Scanner - Free Online QR Reader (Image Upload, Private)",
-    "description": "Free QR code scanner tool to upload and decode images directly in your browser. 100% secure, private, and works on desktop and mobile devices."
+    "description": "Free QR code scanner tool to upload and decode images directly in your browser. 100% secure, private, and works on desktop and mobile devices.",
+    "isAccessibleForFree": true,
+    "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/qr-code-scanner"
+    },
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/qr-generator-tools"
+    }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "QR Code Scanner",
     "operatingSystem": "Any",
     "applicationCategory": "UtilityApplication",
     "description": "Free, secure, and private QR code scanner that runs entirely in your browser. Decode URLs, Wi Fi, contacts, and Bitcoin QR codes from images.",
     "url": "https://www.alltoolai.com/qr-code-scanner",
-    "author": {
-      "@type": "Organization",
-      "name": "AllToolAI",
-      "url": "https://www.alltoolai.com/"
-    },
     "offers": {
       "@type": "Offer",
       "price": "0",
       "priceCurrency": "USD"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/qr-code-scanner"
     }
   }
   </script>
