--- a/qr-generator-tools.html
+++ b/qr-generator-tools.html
@@ -7,7 +7,7 @@
   <link rel="canonical" href="https://www.alltoolai.com/qr-generator-tools" />
 
   <!-- BEGIN: SEO META -->
-  <title>Free QR Code Generator Tools (Create + Scan) Fast, Unlimited & Secure | All Tool AI</title>
+  <title>Free QR Code Generator Tools Fast, Unlimited & Secure | All Tool AI</title>
   <meta name="description" content="Create, scan, and share QR codes for Wi‑Fi, URLs, text, email, phone, SMS, WhatsApp, vCard, events, Bitcoin, maps, Zoom & Skype. 100% free, unlimited, and privacy first." />
   <meta name="keywords" content="QR code generator, free QR code generator, QR code scanner, WiFi QR code, URL QR code, text QR code, email QR code, phone QR code, SMS QR code, WhatsApp QR code, vCard QR code, event QR code, Bitcoin QR code, location QR code, Zoom QR code, Skype QR code, create QR code online, secure QR generator, no signup, unlimited QR tool, All Tool AI" />
   <meta name="robots" content="index, follow, max-snippet, max-image-preview" />
@@ -53,7 +53,14 @@
     "name": "Free QR Code Generator Tools",
     "url": "https://www.alltoolai.com/qr-generator-tools",
     "description": "Top, fast, and best in class free QR tools to create and scan Wi-Fi, URL, Text, Email, Phone, SMS, WhatsApp, vCard, Event, Bitcoin, Location, Zoom, and Skype QR codes securely and unlimited.",
+    "applicationCategory": "UtilitiesApplication",
+    "operatingSystem": "Web",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/qr-generator-tools"
+    },
     "isPartOf": {
       "@type": "WebSite",
       "url": "https://www.alltoolai.com/"
@@ -120,20 +127,118 @@
     "itemListOrder": "Ascending",
     "numberOfItems": 14,
     "itemListElement": [
-      {"@type":"ListItem","position":1,"name":"QR Code Scanner","url":"https://www.alltoolai.com/qr-code-scanner"},
-      {"@type":"ListItem","position":2,"name":"Wi‑Fi QR Code Generator","url":"https://www.alltoolai.com/wifi-qr-code-generator"},
-      {"@type":"ListItem","position":3,"name":"Text QR Code Generator","url":"https://www.alltoolai.com/text-qr-code-generator"},
-      {"@type":"ListItem","position":4,"name":"URL/Link QR Code Generator","url":"https://www.alltoolai.com/url-qr-code-generator"},
-      {"@type":"ListItem","position":5,"name":"Email QR Code Generator","url":"https://www.alltoolai.com/email-qr-code-generator"},
-      {"@type":"ListItem","position":6,"name":"Phone Number QR Code Generator","url":"https://www.alltoolai.com/phone-qr-code-generator"},
-      {"@type":"ListItem","position":7,"name":"SMS QR Code Generator","url":"https://www.alltoolai.com/sms-qr-code-generator"},
-      {"@type":"ListItem","position":8,"name":"WhatsApp QR Code Generator","url":"https://www.alltoolai.com/whatsapp-qr-code-generator"},
-      {"@type":"ListItem","position":9,"name":"Zoom QR Code Generator","url":"https://www.alltoolai.com/zoom-qr-code-generator"},
-      {"@type":"ListItem","position":10,"name":"Skype QR Code Generator","url":"https://www.alltoolai.com/skype-qr-code-generator"},
-      {"@type":"ListItem","position":11,"name":"vCard QR Code Generator","url":"https://www.alltoolai.com/vcard-qr-code-generator"},
-      {"@type":"ListItem","position":12,"name":"Event QR Code Generator","url":"https://www.alltoolai.com/event-qr-code-generator"},
-      {"@type":"ListItem","position":13,"name":"Bitcoin QR Code Generator","url":"https://www.alltoolai.com/bitcoin-qr-code-generator"},
-      {"@type":"ListItem","position":14,"name":"Location QR Code Generator","url":"https://www.alltoolai.com/location-qr-code-generator"}   
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "QR Code Scanner",
+        "url": "https://www.alltoolai.com/qr-code-scanner",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Wi‑Fi QR Code Generator",
+        "url": "https://www.alltoolai.com/wifi-qr-code-generator",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Text QR Code Generator",
+        "url": "https://www.alltoolai.com/text-qr-code-generator",
+        "applicationCategory": "UtilitiesApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 4,
+        "name": "URL/Link QR Code Generator",
+        "url": "https://www.alltoolai.com/url-qr-code-generator",
+        "applicationCategory": "UtilitiesApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 5,
+        "name": "Email QR Code Generator",
+        "url": "https://www.alltoolai.com/email-qr-code-generator",
+        "applicationCategory": "UtilitiesApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 6,
+        "name": "Phone Number QR Code Generator",
+        "url": "https://www.alltoolai.com/phone-qr-code-generator",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 7,
+        "name": "SMS QR Code Generator",
+        "url": "https://www.alltoolai.com/sms-qr-code-generator",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 8,
+        "name": "WhatsApp QR Code Generator",
+        "url": "https://www.alltoolai.com/whatsapp-qr-code-generator",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 9,
+        "name": "Zoom QR Code Generator",
+        "url": "https://www.alltoolai.com/zoom-qr-code-generator",
+        "applicationCategory": "WebApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 10,
+        "name": "Skype QR Code Generator",
+        "url": "https://www.alltoolai.com/skype-qr-code-generator",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 11,
+        "name": "vCard QR Code Generator",
+        "url": "https://www.alltoolai.com/vcard-qr-code-generator",
+        "applicationCategory": "WebApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 12,
+        "name": "Event QR Code Generator",
+        "url": "https://www.alltoolai.com/event-qr-code-generator",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 13,
+        "name": "Bitcoin QR Code Generator",
+        "url": "https://www.alltoolai.com/bitcoin-qr-code-generator",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 14,
+        "name": "Location QR Code Generator",
+        "url": "https://www.alltoolai.com/location-qr-code-generator",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      }
     ]
   }
   </script>
