--- a/skype-qr-code-generator.html
+++ b/skype-qr-code-generator.html
@@ -54,16 +54,22 @@
     "name": "Skype QR Code Generator",
     "url": "https://www.alltoolai.com/skype-qr-code-generator",
     "description": "Generate free Skype QR codes for adding contacts, chats, calls, and video calls. 100% private, customizable, and downloadable as PNG or PDF.",
+    "isAccessibleForFree": true,
+    "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/skype-qr-code-generator"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/qr-generator-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Skype QR Code Generator",
     "operatingSystem": "Any",
     "applicationCategory": "UtilityApplication",
@@ -83,10 +89,14 @@
       "price": "0",
       "priceCurrency": "USD"
     },
-    "author": {
+    "publisher": {
       "@type": "Organization",
       "name": "AllToolAI",
       "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/skype-qr-code-generator"
     }
   }
   </script>
