--- a/sms-qr-code-generator.html
+++ b/sms-qr-code-generator.html
@@ -50,17 +50,22 @@
     "name": "SMS QR Code Generator",
     "url": "https://www.alltoolai.com/sms-qr-code-generator",
     "description": "Free, private, client-side SMS (smsto:) QR code generator to create and customize text message QR codes instantly. No uploads, no signups, 100% secure.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/sms-qr-code-generator"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/qr-generator-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "SMS QR Code Generator",
     "operatingSystem": "Any (Web-based)",
     "applicationCategory": "UtilityApplication",
@@ -78,10 +83,14 @@
       "priceCurrency": "USD",
       "category": "Free Tool"
     },
-    "author": {
+    "publisher": {
       "@type": "Organization",
       "name": "AllToolAI",
       "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/sms-qr-code-generator"
     }
   }
   </script>
