--- a/text-qr-code-generator.html
+++ b/text-qr-code-generator.html
@@ -51,22 +51,27 @@
     "name": "Text to QR Code Generator",  
     "url": "https://www.alltoolai.com/text-qr-code-generator",  
     "description": "Generate and customize QR codes from text instantly. Free, fast, and private tool to create PNG or PDF QR codes with custom colors and logos.",  
-    "isPartOf": {  
-      "@type": "WebSite",  
-      "url": "https://www.alltoolai.com/"  
-    }  
+    "isAccessibleForFree": true,
+    "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/text-qr-code-generator"
+    },
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/qr-generator-tools"
+    }
   }  
   </script>
   <script type="application/ld+json">  
   {  
     "@context": "https://schema.org",  
-    "@type": "SoftwareApplication",  
+    "@type": "Software",  
     "name": "Text to QR Code Generator",  
     "operatingSystem": "Any",  
     "applicationCategory": "UtilitiesApplication",  
     "description": "A client-side tool to generate and customize QR codes from text. Download as PNG or PDF with optional logo and colors.",  
     "url": "https://www.alltoolai.com/text-qr-code-generator",  
-    "image": "https://www.alltoolai.com/assets/og-text-qr-code-generator.png",  
     "offers": {  
       "@type": "Offer",  
       "price": "0",  
@@ -78,7 +83,16 @@
       "Download PNG or PDF",  
       "High resolution export",  
       "Private and secure (no data sent to server)"  
-    ]  
+    ],
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/text-qr-code-generator"
+    }
   }  
   </script>
   <script type="application/ld+json">
