--- a/url-qr-code-generator.html
+++ b/url-qr-code-generator.html
@@ -52,28 +52,27 @@
     "name": "URL QR Code Generator",
     "url": "https://www.alltoolai.com/url-qr-code-generator",
     "description": "Free, fast, private URL QR code generator. Create and customize link QR codes with logo, color, and download options for PNG or PDF — 100% client-side.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/url-qr-code-generator"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "name": "AllToolAI",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/qr-generator-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "URL QR Code Generator",
     "operatingSystem": "Any",
     "applicationCategory": "UtilitiesApplication",
     "description": "A free, private, browser-based tool to generate QR codes for URLs or links with customizable colors, logos, and high-resolution exports.",
     "url": "https://www.alltoolai.com/url-qr-code-generator",
-    "creator": {
-      "@type": "Organization",
-      "name": "AllToolAI",
-      "url": "https://www.alltoolai.com/"
-    },
     "featureList": [
       "Free and unlimited use",
       "Runs locally for privacy",
@@ -84,6 +83,15 @@
       "@type": "Offer",
       "price": "0.00",
       "priceCurrency": "USD"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/url-qr-code-generator"
     }
   }
   </script>
