--- a/vcard-qr-code-generator.html
+++ b/vcard-qr-code-generator.html
@@ -49,17 +49,22 @@
     "name": "Free vCard QR Code Generator (VCF)",
     "headline": "Free vCard QR Code Generator (VCF)",
     "description": "Create vCard (VCF) contact QR codes instantly. Add name, phone, email, company, logo, and colors. 100% private, client-side, and free to use.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/vcard-qr-code-generator"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/qr-generator-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "vCard QR Code Generator",
     "operatingSystem": "All",
     "applicationCategory": "WebApplication",
@@ -78,7 +83,16 @@
       "PNG and PDF export",
       "100% client-side privacy"
     ],
-    "browserRequirements": "Requires a modern web browser with JavaScript enabled"
+    "browserRequirements": "Requires a modern web browser with JavaScript enabled",
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/vcard-qr-code-generator"
+    }
   }
   </script>
   <script type="application/ld+json">
