--- a/whatsapp-qr-code-generator.html
+++ b/whatsapp-qr-code-generator.html
@@ -56,16 +56,22 @@
     "name": "WhatsApp QR Code Generator",
     "url": "https://www.alltoolai.com/whatsapp-qr-code-generator",
     "description": "Free and private WhatsApp QR Code Generator to create wa.me QR codes with prefilled messages, custom colors, and logos. 100% client-side and secure.",
+    "isAccessibleForFree": true,
+    "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/whatsapp-qr-code-generator"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/qr-generator-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "WhatsApp QR Code Generator",
     "operatingSystem": "Any",
     "applicationCategory": "UtilityApplication",
@@ -86,37 +92,12 @@
     },
     "publisher": {
       "@type": "Organization",
-      "name": "All Tool AI",
+      "name": "AllToolAI",
       "url": "https://www.alltoolai.com/"
-    }
-  }
-  </script>
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
-    "name": "WhatsApp QR Code Generator",
-    "operatingSystem": "Any",
-    "applicationCategory": "UtilityApplication",
-    "url": "https://www.alltoolai.com/whatsapp-qr-code-generator",
-    "description": "Generate and customize WhatsApp QR codes (wa.me links) with optional messages, colors, and logos. Fast, free, and private tool running entirely in your browser.",
-    "featureList": [
-      "Generate WhatsApp QR codes",
-      "Add prefilled messages",
-      "Customize colors and logo",
-      "Download as PNG or PDF",
-      "Runs 100% client-side for privacy"
-    ],
-    "offers": {
-      "@type": "Offer",
-      "price": "0",
-      "priceCurrency": "USD",
-      "category": "Free"
     },
-    "publisher": {
-      "@type": "Organization",
-      "name": "All Tool AI",
-      "url": "https://www.alltoolai.com/"
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/whatsapp-qr-code-generator"
     }
   }
   </script>
