--- a/wifi-qr-code-generator.html
+++ b/wifi-qr-code-generator.html
@@ -53,17 +53,22 @@
     "name": "Wi-Fi QR Code Generator",
     "url": "https://www.alltoolai.com/wifi-qr-code-generator",
     "description": "Generate and customize free Wi-Fi QR codes for WPA/WPA2/WPA3, WEP, and open networks. 100% client-side, private, and fast downloads in PNG or PDF.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/wifi-qr-code-generator"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "@id": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/qr-generator-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Wi-Fi QR Code Generator",
     "applicationCategory": "UtilityApplication",
     "operatingSystem": "All (Web-based)",
@@ -84,7 +89,11 @@
     "publisher": {
       "@type": "Organization",
       "name": "AllToolAI",
-      "url": "https://www.alltoolai.com"
+      "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/wifi-qr-code-generator"
     }
   }
   </script>
