--- a/zoom-qr-code-generator.html
+++ b/zoom-qr-code-generator.html
@@ -49,17 +49,22 @@
     "name": "Zoom QR Code Generator",
     "url": "https://www.alltoolai.com/zoom-qr-code-generator",
     "description": "Create free Zoom meeting QR codes instantly. Customize colors, include passcodes, and download high-quality PNG or PDF QR codes. 100% client-side, secure, and free forever.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/zoom-qr-code-generator"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/qr-generator-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Zoom QR Code Generator",
     "operatingSystem": "Any",
     "applicationCategory": "WebApplication",
@@ -74,7 +79,11 @@
     "publisher": {
       "@type": "Organization",
       "name": "AllToolAI",
-      "url": "https://www.alltoolai.com"
+      "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/zoom-qr-code-generator"
     }
   }
   </script>
