--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         "position": 4,
         "name": "Calculator Tools",
         "url": "https://www.alltoolai.com/calculator-tools",
-        "applicationCategory": "UtilitiesApplication",
+        "applicationCategory": "CalculatorApplication",
         "operatingSystem": "Web"
       },
       {
